# Collections-sample

./: CMakeLists.txt  README.md  additionaloperations.h  advancediteratoroperations.cpp  advancediteratoroperations.h  arrays.cpp  arrays.h  book.h  iterator.cpp  iterator.h  linkedlist.cpp  linkedlist.h  lists.cpp  lists.h  main.cpp  prints.cpp  prints.h  queue.cpp  queue.h  samplestructs.h  stack.cpp  stack.h  voidlist.cpp  voidlist.h
